--- a/HW_03.Rmd
+++ b/HW_03.Rmd
@@ -7,22 +7,126 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Welcome to my 3rd assignment! 
+In this assignment I will be using dplyr/ggplot2 to manipulate and explore data
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+Below I accomplish 3 tasks:
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+1) Calculate and visualize the maximum and minimum of GDP per capita for all continents.
 
-```{r cars}
-summary(cars)
+2) Figure out how life expectancy changing over time on different continents, and visualize it.
+
+3) Look at, and visualize the spread of population within the continents 
+
+I accomplish these tasks using the *gapmnder* data set. I do these tasks in a concise way to keep it clean and reduce clutter, or confusion. I appreciate straight forward data manipulation and show this style in my work through minimal coding, clear explanations of my actions, clean spacing, and simple visualizations.
+
+```{r}
+#Firstly I will load te packages. I will suppress them to quiet the libray call outs on my code and keep my code clean
+suppressPackageStartupMessages(library(gapminder))
+suppressPackageStartupMessages(library(tidyverse))
+suppressPackageStartupMessages(library(knitr))
 ```
 
-## Including Plots
+## 1) Get the maximum and minimum of GDP per capita for all continents.
 
-You can also embed plots, for example:
+Firstly, I create a table for all the continents showing the minimum and maximum GDPs. I store this in a value called "Max_Min_gdpPercap_continent" so I can easily recall the manipulation for a table and a plot.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+Max_Min_gdpPercap_continent <- gapminder %>%
+  group_by(continent) %>%
+    summarize(min_gdpPercap = min(gdpPercap),
+            max_gdpPercap = max(gdpPercap))
+
+Max_Min_gdpPercap_continent %>%
+  kable(align = "c")
+
+#When plotting these values, we can create 2 plots, one showing both maximum GDP and another showing minimum GDP. 
+
+Max_Min_gdpPercap_continent %>%
+  ggplot(aes(continent,min_gdpPercap, fill=continent)) +
+    geom_col() +
+    ggtitle("Continental spread of minimum Gdp per capita") +
+    xlab("Continent") +
+    ylab("Min GDP per capita")
+
+Max_Min_gdpPercap_continent %>%
+  ggplot(aes(continent,max_gdpPercap, fill=continent)) +
+    geom_col() +
+    ggtitle("Continental spread of maximum Gdp per capita") +
+    xlab("Continent") +
+    ylab("Max GDP per capita")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Great! Now we have a graph for both minimum gdpPercap and maximum gdpPercap. It would be easier to visualize the minimum and maximum on the same graph so I will make another one. This time I will use the general *gapminder* dataset to get all of the gdpPercap data, rather than pulling from the vector I created ("Max_Min_gdpPercap_continent"). When I plot the general data how will I show man and min GDP? I will use a box plot with jitter-- it allows you to see the maximum and minimum values, as well as the spread of the rest of the data. I will show the data for both 1952 and 2007 (the first and last years in the data set). The values for 1952 are on a log scale as outliers in the data make it difficult the visualize the entire data set since they make the y-axis more extreme. By scaling the y-axis we get a better visualization across continents. 
+
+I find that it makes more sense to do it per year, as if you did a general gdpPercap it shows data from 1952-2007. I don't believe that would be very representative as there is 55 years of data being shown... a lot can change in 55 years.
+
+```{r}
+gapminder %>% 
+  filter(year == 1952) %>%
+    group_by(continent) %>%
+      ggplot(aes(continent, gdpPercap, fill=continent)) +
+        geom_boxplot() +
+        geom_jitter(aes(colour = continent), alpha = 0.2)  + 
+        scale_y_log10() +
+        ggtitle("Continental spread of GDP per capita in 1952") +
+        xlab("Continent") +
+        ylab("GDP per capita")
+
+
+  gapminder %>% 
+    filter(year == 2007) %>%
+      group_by(continent) %>%
+        ggplot(aes(continent, gdpPercap, fill=continent)) +
+          geom_boxplot() +
+          geom_jitter(aes(colour = continent), alpha = 0.2) +
+          ggtitle("Continental spread of GDP per capita in 2007") +
+          xlab("Continent") +
+          ylab("GDP per capita")
+```
+
+## 2) How is life expectancy changing over time on different continents?
+
+```{r}
+lifeExp_peryear <- gapminder %>%
+  group_by(continent, year) %>%
+  summarize(Average_lifeExp = mean(lifeExp))
+
+lifeExp_peryear %>%
+kable(align = "c")
+
+lifeExp_peryear %>%
+  ggplot(aes(year, Average_lifeExp, colour=continent)) +
+    geom_line() +
+    geom_point() +
+    ggtitle("Life expectancy from 1952 to 2007 by continent") +
+    xlab("Continent") +
+    ylab("Life expectancy")
+
+```
+
+## 3) Look at, and visualize the spread of population within the continents in 
+
+```{r}
+Spread_pop_continent <- gapminder %>%
+  group_by(continent) %>%
+    summarize(min_pop = min(pop),
+            max_pop = max(pop),
+            mean_pop = mean(pop),
+            median_popo = median(pop),
+            sd_pop = sd(pop))
+
+Spread_pop_continent %>%
+  kable(align = "c")
+
+gapminder %>%
+  ggplot(aes(continent, pop)) +
+    scale_y_log10() + #we scale because without it, the outliers make it difficult to see the spread
+    geom_boxplot(aes(colour=continent)) + 
+    geom_jitter(aes(colour=continent), alpha=0.1) +
+    ggtitle("Spread of population (1952-2007)") + 
+    xlab("Continent") + 
+    ylab("Population")
+
+```
+
