--- a/HW_03.Rmd
+++ b/HW_03.Rmd
@@ -25,6 +25,9 @@ I accomplish these tasks using the *gapmnder* data set. I do these tasks in a co
 suppressPackageStartupMessages(library(gapminder))
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(knitr))
+suppressPackageStartupMessages(library(grid))
+suppressPackageStartupMessages(library(gridExtra))
+
 ```
 
 ## 1) Get the maximum and minimum of GDP per capita for all continents.
@@ -39,17 +42,22 @@ Max_Min_gdpPercap_continent <- gapminder %>%
 
 Max_Min_gdpPercap_continent %>%
   kable(align = "c")
+```
 
-#When plotting these values, we can create 2 plots, one showing both maximum GDP and another showing minimum GDP. 
+When plotting these values, we can create 2 plots, one showing both maximum GDP and another showing minimum GDP. 
 
-Max_Min_gdpPercap_continent %>%
+```{r}
+Min_graph <- Max_Min_gdpPercap_continent %>%
   ggplot(aes(continent,min_gdpPercap, fill=continent)) +
     geom_col() +
     ggtitle("Continental spread of minimum Gdp per capita") +
     xlab("Continent") +
     ylab("Min GDP per capita")
+```
 
-Max_Min_gdpPercap_continent %>%
+
+```{r}
+Max_graph <- Max_Min_gdpPercap_continent %>%
   ggplot(aes(continent,max_gdpPercap, fill=continent)) +
     geom_col() +
     ggtitle("Continental spread of maximum Gdp per capita") +
@@ -57,32 +65,9 @@ Max_Min_gdpPercap_continent %>%
     ylab("Max GDP per capita")
 ```
 
-Great! Now we have a graph for both minimum gdpPercap and maximum gdpPercap. It would be easier to visualize the minimum and maximum on the same graph so I will make another one. This time I will use the general *gapminder* dataset to get all of the gdpPercap data, rather than pulling from the vector I created ("Max_Min_gdpPercap_continent"). When I plot the general data how will I show man and min GDP? I will use a box plot with jitter-- it allows you to see the maximum and minimum values, as well as the spread of the rest of the data. I will show the data for both 1952 and 2007 (the first and last years in the data set). The values for 1952 are on a log scale as outliers in the data make it difficult the visualize the entire data set since they make the y-axis more extreme. By scaling the y-axis we get a better visualization across continents. 
-
-I find that it makes more sense to do it per year, as if you did a general gdpPercap it shows data from 1952-2007. I don't believe that would be very representative as there is 55 years of data being shown... a lot can change in 55 years.
-
+I have created a graph for both min GDP and max GDP, I will put them next to each other for easy comparison
 ```{r}
-gapminder %>% 
-  filter(year == 1952) %>%
-    group_by(continent) %>%
-      ggplot(aes(continent, gdpPercap, fill=continent)) +
-        geom_boxplot() +
-        geom_jitter(aes(colour = continent), alpha = 0.2)  + 
-        scale_y_log10() +
-        ggtitle("Continental spread of GDP per capita in 1952") +
-        xlab("Continent") +
-        ylab("GDP per capita")
-
-
-  gapminder %>% 
-    filter(year == 2007) %>%
-      group_by(continent) %>%
-        ggplot(aes(continent, gdpPercap, fill=continent)) +
-          geom_boxplot() +
-          geom_jitter(aes(colour = continent), alpha = 0.2) +
-          ggtitle("Continental spread of GDP per capita in 2007") +
-          xlab("Continent") +
-          ylab("GDP per capita")
+grid.arrange(Min_graph, Max_graph)
 ```
 
 ## 2) How is life expectancy changing over time on different continents?
@@ -100,7 +85,7 @@ lifeExp_peryear %>%
     geom_line() +
     geom_point() +
     ggtitle("Life expectancy from 1952 to 2007 by continent") +
-    xlab("Continent") +
+    xlab("Year") +
     ylab("Life expectancy")
 
 ```
