--- a/HW_03.md
+++ b/HW_03.md
@@ -21,6 +21,8 @@ I accomplish these tasks using the *gapmnder* data set. I do these tasks in a co
 suppressPackageStartupMessages(library(gapminder))
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(knitr))
+suppressPackageStartupMessages(library(grid))
+suppressPackageStartupMessages(library(gridExtra))
 ```
 
 1) Get the maximum and minimum of GDP per capita for all continents.
@@ -46,10 +48,10 @@ Max_Min_gdpPercap_continent %>%
 |   Europe  |    973.5332    |    49357.19    |
 |  Oceania  |   10039.5956   |    34435.37    |
 
-``` r
-#When plotting these values, we can create 2 plots, one showing both maximum GDP and another showing minimum GDP. 
+When plotting these values, we can create 2 plots, one showing both maximum GDP and another showing minimum GDP.
 
-Max_Min_gdpPercap_continent %>%
+``` r
+Min_graph <- Max_Min_gdpPercap_continent %>%
   ggplot(aes(continent,min_gdpPercap, fill=continent)) +
     geom_col() +
     ggtitle("Continental spread of minimum Gdp per capita") +
@@ -57,10 +59,8 @@ Max_Min_gdpPercap_continent %>%
     ylab("Min GDP per capita")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-2-1.png)
-
 ``` r
-Max_Min_gdpPercap_continent %>%
+Max_graph <- Max_Min_gdpPercap_continent %>%
   ggplot(aes(continent,max_gdpPercap, fill=continent)) +
     geom_col() +
     ggtitle("Continental spread of maximum Gdp per capita") +
@@ -68,40 +68,13 @@ Max_Min_gdpPercap_continent %>%
     ylab("Max GDP per capita")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-2-2.png)
-
-Great! Now we have a graph for both minimum gdpPercap and maximum gdpPercap. It would be easier to visualize the minimum and maximum on the same graph so I will make another one. This time I will use the general *gapminder* dataset to get all of the gdpPercap data, rather than pulling from the vector I created ("Max\_Min\_gdpPercap\_continent"). When I plot the general data how will I show man and min GDP? I will use a box plot with jitter-- it allows you to see the maximum and minimum values, as well as the spread of the rest of the data. I will show the data for both 1952 and 2007 (the first and last years in the data set). The values for 1952 are on a log scale as outliers in the data make it difficult the visualize the entire data set since they make the y-axis more extreme. By scaling the y-axis we get a better visualization across continents.
-
-I find that it makes more sense to do it per year, as if you did a general gdpPercap it shows data from 1952-2007. I don't believe that would be very representative as there is 55 years of data being shown... a lot can change in 55 years.
+I have created a graph for both min GDP and max GDP, I will put them next to each other for easy comparison
 
 ``` r
-gapminder %>% 
-  filter(year == 1952) %>%
-    group_by(continent) %>%
-      ggplot(aes(continent, gdpPercap, fill=continent)) +
-        geom_boxplot() +
-        geom_jitter(aes(colour = continent), alpha = 0.2)  + 
-        scale_y_log10() +
-        ggtitle("Continental spread of GDP per capita in 1952") +
-        xlab("Continent") +
-        ylab("GDP per capita")
+grid.arrange(Min_graph, Max_graph)
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-3-1.png)
-
-``` r
-  gapminder %>% 
-    filter(year == 2007) %>%
-      group_by(continent) %>%
-        ggplot(aes(continent, gdpPercap, fill=continent)) +
-          geom_boxplot() +
-          geom_jitter(aes(colour = continent), alpha = 0.2) +
-          ggtitle("Continental spread of GDP per capita in 2007") +
-          xlab("Continent") +
-          ylab("GDP per capita")
-```
-
-![](HW_03_files/figure-markdown_github/unnamed-chunk-3-2.png)
+![](HW_03_files/figure-markdown_github/unnamed-chunk-5-1.png)
 
 2) How is life expectancy changing over time on different continents?
 ---------------------------------------------------------------------
@@ -184,11 +157,11 @@ lifeExp_peryear %>%
     geom_line() +
     geom_point() +
     ggtitle("Life expectancy from 1952 to 2007 by continent") +
-    xlab("Continent") +
+    xlab("Year") +
     ylab("Life expectancy")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-4-1.png)
+![](HW_03_files/figure-markdown_github/unnamed-chunk-6-1.png)
 
 3) Look at, and visualize the spread of population within the continents in
 ---------------------------------------------------------------------------
@@ -225,4 +198,4 @@ gapminder %>%
     ylab("Population")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-5-1.png)
+![](HW_03_files/figure-markdown_github/unnamed-chunk-7-1.png)
