--- a/HW_03.md
+++ b/HW_03.md
@@ -78,6 +78,40 @@ grid.arrange(Min_graph, Max_graph)
 
 ![](HW_03_files/figure-markdown_github/unnamed-chunk-5-1.png)
 
+After creating this visualization I think it would be informative to create a graph showing the difference betweeen the maximum and minimum GDP for each continent-- to see the spread.
+
+``` r
+Spread_gdpPercap_continent <- gapminder %>%
+  group_by(continent) %>%
+    summarize(min_gdpPercap = min(gdpPercap),
+            max_gdpPercap = max(gdpPercap), GDP_spread = (max_gdpPercap-min_gdpPercap))
+
+Spread_gdpPercap_continent %>%
+  kable(align = "c")
+```
+
+| continent | min\_gdpPercap | max\_gdpPercap | GDP\_spread |
+|:---------:|:--------------:|:--------------:|:-----------:|
+|   Africa  |    241.1659    |    21951.21    |   21710.05  |
+|  Americas |    1201.6372   |    42951.65    |   41750.02  |
+|    Asia   |    331.0000    |    113523.13   |  113192.13  |
+|   Europe  |    973.5332    |    49357.19    |   48383.66  |
+|  Oceania  |   10039.5956   |    34435.37    |   24395.77  |
+
+``` r
+Spread_gdpPercap_continent %>%
+  ggplot(aes(continent,GDP_spread, fill=continent)) +
+    geom_col() +
+    ggtitle("Continental spread of Gdp per capita (max - min)") +
+    xlab("Continent") +
+    ylab("Difference in GDP") +
+    theme(legend.position = "none")
+```
+
+![](HW_03_files/figure-markdown_github/unnamed-chunk-6-1.png)
+
+\`\`\`
+
 2) How is life expectancy changing over time on different continents?
 ---------------------------------------------------------------------
 
@@ -163,7 +197,7 @@ lifeExp_peryear %>%
     ylab("Life expectancy")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-6-1.png)
+![](HW_03_files/figure-markdown_github/unnamed-chunk-7-1.png)
 
 3) Look at, and visualize the spread of population within the continents in
 ---------------------------------------------------------------------------
@@ -200,4 +234,4 @@ gapminder %>%
     ylab("Population")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-7-1.png)
+![](HW_03_files/figure-markdown_github/unnamed-chunk-8-1.png)
