--- a/HW_03.md
+++ b/HW_03.md
@@ -110,7 +110,7 @@ Spread_gdpPercap_continent %>%
 
 ![](HW_03_files/figure-markdown_github/unnamed-chunk-6-1.png)
 
-\`\`\`
+This graph shows the size of the difference between max GDP and min GDP in each continent-- it looks like Asia has the largest spread in GDP and Africa has the smallest.
 
 2) How is life expectancy changing over time on different continents?
 ---------------------------------------------------------------------
