--- a/HW_03.md
+++ b/HW_03.md
@@ -78,6 +78,8 @@ grid.arrange(Min_graph, Max_graph)
 
 ![](HW_03_files/figure-markdown_github/unnamed-chunk-5-1.png)
 
+When we analyze the graphs we can see that Oceania has the highest minimum gdp per capita and Africa has the lowest minimum gdp per capita. that Asia has the highest max gdp per capita and Africa has the lowest max gdp per capita.
+
 After creating this visualization I think it would be informative to create a graph showing the difference betweeen the maximum and minimum GDP for each continent-- to see the spread.
 
 ``` r
@@ -110,7 +112,7 @@ Spread_gdpPercap_continent %>%
 
 ![](HW_03_files/figure-markdown_github/unnamed-chunk-6-1.png)
 
-This graph shows the size of the difference between max GDP and min GDP in each continent-- it looks like Asia has the largest spread in GDP and Africa has the smallest.
+This graph shows the size of the difference between max GDP and min GDP in each continent-- it looks like Asia has the largest spread in GDP and Africa has the smallest. This means that there is a large difference in GDP among the people who live in Asia, while in Africa people tend to have similar GDPs.
 
 2) How is life expectancy changing over time on different continents?
 ---------------------------------------------------------------------
@@ -199,6 +201,8 @@ lifeExp_peryear %>%
 
 ![](HW_03_files/figure-markdown_github/unnamed-chunk-7-1.png)
 
+When we look at the visualization we can tell that all countries have a general increase in life expectancy. Oceania has the highest life expectancy rate between 1952 and 2007, whereas Africa has the lowest.
+
 3) Look at, and visualize the spread of population within the continents in
 ---------------------------------------------------------------------------
 
@@ -234,4 +238,4 @@ gapminder %>%
     ylab("Population")
 ```
 
-![](HW_03_files/figure-markdown_github/unnamed-chunk-8-1.png)
+![](HW_03_files/figure-markdown_github/unnamed-chunk-8-1.png) This graph shows us that Asia has the highest population. I had to apply a log scale to the y axis as the scale of Asia's population was so high that the rest of the data was difficult to view.
